[gd_scene load_steps=34 format=3 uid="uid://cah3hunwa34v8"]

[ext_resource type="Script" path="res://Rooms/Biomes/basecamp/BaseCamp.gd" id="1_tpf7m"]
[ext_resource type="TileSet" uid="uid://b6ahcd27jnf2v" path="res://Rooms/TileSet.tres" id="2_ipa5f"]
[ext_resource type="Script" path="res://interact_area.gd" id="2_n3t3v"]
[ext_resource type="Theme" uid="uid://b0askjdx1bs38" path="res://Theme.tres" id="4_6s3ou"]
[ext_resource type="Texture2D" uid="uid://rx1c6wfrx15r" path="res://Art/Furniture and room elements/wardrobe.png" id="4_8ics2"]
[ext_resource type="PackedScene" uid="uid://cq825lguwrtg7" path="res://Rooms/Furniture and Traps/campfire.tscn" id="4_k7esm"]
[ext_resource type="Script" path="res://ui/WardrobeUI.gd" id="4_nybk1"]
[ext_resource type="Texture2D" uid="uid://cpda4qwx1x4j6" path="res://Art/v1.1 dungeon crawler 16x16 pixel pack/sign.png" id="9_dti1o"]
[ext_resource type="Script" path="res://start_area.gd" id="9_r816v"]
[ext_resource type="Script" path="res://Rooms/Biomes/basecamp/seed_line_edit.gd" id="12_esh87"]
[ext_resource type="FontVariation" uid="uid://du8fthyvf666a" path="res://Fonts/small_font.tres" id="13_2uruh"]
[ext_resource type="AudioStream" uid="uid://dq7f7p17hn6bl" path="res://Audio/Sounds/280235__toefur__open-wardrobe-1.wav" id="15_iuhqb"]
[ext_resource type="AudioStream" uid="uid://dsphctheyll2w" path="res://Audio/Music/Gymnop√©die no. 1 (for Harp).mp3" id="18_0hiag"]
[ext_resource type="Texture2D" uid="uid://damq3pevnossx" path="res://Art/16x16 Pixel Art Roguelike (Forest) Pack/Buildings/camp_playerTent_medio.png" id="21_bua2m"]
[ext_resource type="Texture2D" uid="uid://rcer8qg2relw" path="res://Art/16x16 Pixel Art Roguelike (Forest) Pack/Buildings/camp_playerTent_sombra.png" id="22_qdbci"]
[ext_resource type="Texture2D" uid="uid://dpwp05b6e0rne" path="res://Art/16x16 Pixel Art Roguelike (Forest) Pack/Buildings/camp_playerTent_arriba.png" id="23_laaqs"]
[ext_resource type="Script" path="res://Rooms/Furniture and Traps/transparent_parent_when_player_enters.gd" id="24_aoyyl"]
[ext_resource type="PackedScene" uid="uid://bjdf1fgpfe4v0" path="res://Rooms/Biomes/basecamp/WizardHut.tscn" id="25_mnnam"]
[ext_resource type="PackedScene" uid="uid://cyfrse4f5lihp" path="res://Rooms/Biomes/forest/TikiTorch.tscn" id="26_61yb5"]
[ext_resource type="PackedScene" uid="uid://bau1jfwsnyo2o" path="res://Characters/practice_dummy.tscn" id="31_1hy67"]
[ext_resource type="PackedScene" uid="uid://cpcdmduiwspc4" path="res://Rooms/Biomes/basecamp/base_camp_items_shop.tscn" id="37_qhx6q"]
[ext_resource type="PackedScene" uid="uid://geovcmu2q826" path="res://Rooms/Furniture and Traps/sleeping_bag.tscn" id="39_sleg1"]
[ext_resource type="Script" path="res://Characters/npcs/animals/animal_spawner.gd" id="46_v21xh"]

[sub_resource type="NavigationPolygon" id="NavigationPolygon_s6u7b"]
source_geometry_group_name = &"navigation_polygon_source_group"

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qm2jb"]
size = Vector2(52, 5)

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_erbcu"]
size = Vector2(8, 8)

[sub_resource type="CircleShape2D" id="CircleShape2D_2m37t"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_va5t1"]
radius = 6.0
height = 20.0

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_xxlah"]
light_mode = 1

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5rkvv"]
size = Vector2(20, 7)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ie571"]
radius = 7.0
height = 24.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uiodv"]
size = Vector2(32, 28)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_v4sqh"]
size = Vector2(5, 29)

[node name="BaseCamp" type="NavigationRegion2D"]
y_sort_enabled = true
texture_filter = 1
navigation_polygon = SubResource("NavigationPolygon_s6u7b")
script = ExtResource("1_tpf7m")

[node name="TileMap" type="TileMap" parent="." groups=["navigation_polygon_source_group"]]
y_sort_enabled = true
tile_set = ExtResource("2_ipa5f")
format = 2
layer_0/z_index = -2
layer_0/navigation_enabled = false
layer_0/tile_data = PackedInt32Array(262147, 393216, 1, 327683, 196608, 1, 393219, 262144, 2, 458755, 327680, 3, 524291, 327680, 2, 262148, 524288, 3, 327684, 0, 3, 393220, 131072, 0, 458756, 327680, 2, 524292, 327680, 2, 589828, 262144, 3, 196613, 393216, 1, 262149, 458752, 1, 327685, 262144, 2, 393221, 327680, 2, 458757, 327680, 2, 524293, 327680, 3, 589829, 262144, 3, 655365, 131072, 1, 720901, 524288, 2, 131078, 393216, 1, 196614, 458752, 1, 262150, 524288, 2, 327686, 262144, 2, 393222, 327680, 2, 458758, 327680, 2, 524294, 327680, 2, 589830, 65536, 0, 655366, 262144, 1, 720902, 131072, 1, 131079, 131072, 3, 196615, 131072, 3, 262151, 131072, 3, 327687, 131072, 0, 393223, 327680, 2, 458759, 327680, 2, 524295, 327680, 2, 589831, 327680, 3, 655367, 327680, 2, 720903, 262144, 1, 786439, 524288, 2, 131080, 196608, 0, 196616, 327680, 2, 262152, 327680, 2, 327688, 327680, 2, 393224, 458752, 3, 458760, 327680, 2, 524296, 327680, 3, 589832, 458752, 2, 655368, 327680, 3, 720904, 262144, 3, 786440, 196608, 2, 131081, 131072, 2, 196617, 196608, 3, 262153, 196608, 3, 327689, 196608, 0, 393225, 327680, 3, 458761, 327680, 3, 524297, 327680, 3, 589833, 327680, 2, 655369, 327680, 3, 720905, 262144, 3, 786441, 524288, 2, 131082, 196608, 1, 196618, 524288, 3, 262154, 524288, 2, 327690, 262144, 2, 393226, 327680, 2, 458762, 327680, 2, 524298, 327680, 2, 589834, 327680, 3, 655370, 327680, 3, 720906, 262144, 3, 786442, 458752, 1, 131083, 393216, 3, 196619, 0, 3, 262155, 131072, 3, 327691, 131072, 0, 393227, 458752, 2, 458763, 327680, 2, 524299, 327680, 2, 589835, 327680, 3, 655371, 65536, 2, 720907, 0, 2, 786443, 393216, 2, 131084, 524288, 1, 196620, 262144, 2, 262156, 327680, 2, 327692, 327680, 3, 393228, 327680, 2, 458764, 458752, 3, 524300, 327680, 3, 589836, 458752, 2, 655372, 262144, 3, 720908, 393216, 3, 786444, 524288, 3, 131085, 196608, 1, 196621, 131072, 2, 262157, 196608, 0, 327693, 327680, 2, 393229, 65536, 3, 458765, 327680, 3, 524301, 327680, 3, 589837, 327680, 3, 655373, 262144, 3, 720909, 393216, 3, 131086, 393216, 3, 196622, 393216, 1, 262158, 262144, 2, 327694, 458752, 3, 393230, 327680, 2, 458766, 327680, 2, 524302, 327680, 2, 589838, 65536, 2, 655374, 0, 2, 720910, 393216, 3, 196623, 524288, 3, 262159, 262144, 2, 327695, 327680, 2, 393231, 327680, 2, 458767, 327680, 2, 524303, 65536, 2, 589839, 0, 2, 655375, 458752, 1, 720911, 196608, 2, 196624, 524288, 1, 262160, 262144, 2, 327696, 327680, 2, 393232, 327680, 2, 458768, 327680, 2, 524304, 262144, 3, 589840, 458752, 1, 655376, 196608, 2, 720912, 196608, 2, 196625, 196608, 1, 262161, 131072, 2, 327697, 196608, 3, 393233, 196608, 3, 458769, 196608, 3, 524305, 0, 2, 589841, 393216, 2, 655377, 131072, 1, 196626, 131072, 1, 262162, 524288, 1, 327698, 524288, 1, 393234, 458752, 1, 458770, 524288, 1, 524306, 458752, 1, 589842, 524288, 2, 655378, 393216, 2, 262163, 524288, 3, 327699, 458752, 1, 393235, 524288, 1, 458771, 196608, 1, 524307, 524288, 2, 589843, 524288, 3, 655379, 458752, 2, 65542, 393216, 4, 65543, 131072, 3, 65544, 196608, 3, 65545, 393216, 5, 65546, 524288, 5, 65548, 458752, 4, 65550, 458752, 4, 131087, 393216, 5, 131088, 458752, 5, 131089, 458752, 4, 196611, 393216, 5, 131090, 458752, 4, 196627, 393216, 4, 65549, 393216, 4, 65547, 458752, 4, 10, 131072, 7, 11, 131072, 7, 12, 131072, 7, 13, 131072, 7, 65551, 65536, 7, 65552, 131072, 7, 65553, 131072, 7, 65554, 131072, 7, 15, 196608, 4, 14, 131072, 7, 6, 327680, 7, 65555, 196608, 4, 131091, 65536, 7, 131092, 196608, 4, 196628, 196608, 5, 262164, 196608, 5, 327700, 196608, 5, 393236, 196608, 5, 458772, 196608, 5, 524308, 196608, 5, 589844, 196608, 5, 655380, 196608, 5, 720913, 196608, 5, 786445, 196608, 5, 786438, 262144, 5, 720900, 262144, 5, 655364, 262144, 5, 589827, 262144, 3, 524290, 327680, 2, 458754, 327680, 3, 131075, 327680, 7, 9, 65536, 7, 8, 196608, 3, 7, 131072, 3, -65529, 131072, 3, -65528, 196608, 3, -131064, 196608, 3, -131065, 131072, 3, -196601, 131072, 3, -196600, 196608, 3, -262137, 131072, 3, -262136, 196608, 3, -65527, 196608, 5, -131063, 196608, 5, -196599, 196608, 5, -262135, 196608, 5, -65530, 262144, 5, -131066, 262144, 5, -196602, 262144, 5, -262138, 262144, 5, 524289, 327680, 3, 524288, 458752, 2, 589824, 262144, 3, 589825, 262144, 3, 589826, 262144, 3, 458753, 917504, 10, 589823, 327680, 2, 655359, 262144, 3, 655358, 262144, 3, 655357, 262144, 3, 589821, 327680, 2, 589822, 327680, 3, 524283, 327680, 2, 458746, 131072, 0, 524282, 262144, 2, 458747, 524288, 10, 458745, 524288, 2, 458744, 131072, 2, 458743, 262144, 2, 458742, 262144, 2, 458741, 0, 3, 524277, 131072, 0, 524276, 0, 3, 589812, 131072, 0, 655348, 65536, 0, 720884, 131072, 3, 786421, 65536, 0, 851957, 262144, 1, 851958, 65536, 0, 851959, 65536, 2, 851960, 262144, 3, 851961, 0, 2, 851962, 393216, 3, 851963, 196608, 2, 851964, 393216, 1, 786428, 393216, 2, 720892, 393216, 2, 720893, 131072, 1, 655356, 262144, 3, 720891, 196608, 3, 786427, 0, 2, 786426, 262144, 3, 655355, 65536, 2, 589819, 327680, 2, 589820, 327680, 2, 720890, 327680, 3, 786425, 65536, 2, 786424, 327680, 2, 720888, 327680, 2, 720889, 327680, 2, 655353, 327680, 2, 589817, 327680, 2, 589818, 327680, 2, 655354, 458752, 2, 524281, 262144, 2, 524280, 196608, 0, 524279, 327680, 2, 524278, 327680, 3, 589814, 458752, 3, 589813, 327680, 3, 655349, 327680, 2, 655350, 327680, 2, 589815, 327680, 2, 655351, 327680, 3, 720886, 327680, 3, 655352, 327680, 3, 589816, 327680, 2, 720887, 327680, 3, 720885, 327680, 2, 786422, 327680, 3, 786423, 327680, 2, 393209, 458752, 1, 393208, 524288, 1, 393207, 393216, 4, 393206, 524288, 4, 393205, 458752, 5, 458740, 524288, 4, 524275, 196608, 2, 589811, 0, 3, 655347, 262144, 1, 720883, 131072, 1, 786419, 393216, 2, 851955, 131072, 1, 851956, 393216, 3, 917492, 196608, 2, 917493, 393216, 3, 983029, 458752, 1, 983030, 393216, 1, 983031, 524288, 1, 983032, 131072, 1, 917496, 393216, 2, 917497, 131072, 1, 917498, 524288, 3, 917499, 393216, 2, 917495, 0, 2, 786420, 262144, 1, 917494, 262144, 1, 655346, 524288, 3, 720882, 393216, 3, 786418, 393216, 1, 589810, 131072, 1, 524274, 393216, 4, 458739, 393216, 4, 983028, 393216, 2, 327673, 131072, 1, 327672, 458752, 1, 327671, 327680, 7, 327670, 131072, 7, 327669, 131072, 7, 327668, 262144, 4, 393204, 327680, 7, 458738, 327680, 7, 393202, 262144, 4, 458737, 262144, 4, 393203, 131072, 7, 524273, 262144, 5, 589809, 262144, 5, 655345, 262144, 5, 720881, 262144, 5, 786417, 262144, 6, 851954, 262144, 6, 917491, 262144, 5, 983027, 262144, 6, 983033, 196608, 6, 917500, 196608, 6, 851965, 196608, 6, 720894, 196608, 6, 786429, 196608, 5, -524282, 262144, 5, -458746, 262144, 5, -393210, 262144, 5, -327674, 262144, 5, -524281, 131072, 3, -458745, 131072, 3, -393209, 131072, 3, -327673, 131072, 3, -524280, 196608, 3, -458744, 196608, 3, -393208, 196608, 3, -327672, 196608, 3, -524279, 196608, 5, -458743, 196608, 5, -393207, 196608, 5, -327671, 196608, 5, -786426, 262144, 5, -720890, 262144, 5, -655354, 262144, 5, -589818, 262144, 5, -786425, 131072, 3, -720889, 131072, 3, -655353, 131072, 3, -589817, 131072, 3, -786424, 196608, 3, -720888, 196608, 3, -655352, 196608, 3, -589816, 196608, 3, -786423, 196608, 5, -720887, 196608, 5, -655351, 196608, 5, -589815, 196608, 5, 196612, 393216, 1, 131076, 458752, 2, 131077, 458752, 2, 65540, 524288, 5, 65541, 458752, 4, 3, 262144, 4, 4, 131072, 7, 5, 131072, 7, 458752, 655360, 10, 524287, 786432, 10, 524286, 524288, 10, 458750, 1245184, 9, 458749, 786432, 10, 458748, 655360, 10, 524284, 458752, 3, 524285, 327680, 3, 393217, 917504, 9, 393218, 196608, 0, 327682, 196608, 3, 262146, 131072, 2, 196610, 393216, 4, 262145, 917504, 9, 327681, 917504, 9, 393211, 524288, 9, 327674, 131072, 3, 393210, 131072, 3, 262138, 131072, 3, 196602, 0, 3, 196603, 524288, 8, 262139, 524288, 9, 327675, 524288, 9, 196604, 655360, 8, 196605, 786432, 8, 196608, 1114112, 10, 196609, 917504, 8, 131073, 131072, 2, 131072, 917504, 8, 196607, 786432, 8, 196606, 786432, 8, 262137, 196608, 2, 196601, 458752, 1, 65537, 524288, 4, 65536, 458752, 4, 131071, 393216, 4, 131070, 458752, 4, 131069, 458752, 4, 131068, 458752, 4, 131067, 393216, 4, 131066, 393216, 5, 131065, 458752, 4, 262136, 524288, 5, 196600, 327680, 7, 131074, 65536, 7, 65529, 131072, 7, 65530, 131072, 7, 65531, 131072, 7, 65532, 131072, 7, 65533, 131072, 7, 65534, 131072, 7, 65535, 131072, 7, 0, 131072, 7, 1, 131072, 7, 2, 196608, 4, 65528, 262144, 4, 196599, 262144, 4)
layer_1/name = "Bottom walls"
layer_1/z_index = 1
layer_1/tile_data = PackedInt32Array(655378, 131072, 6, 655379, 131072, 6, 655377, 65536, 6, 720909, 65536, 6, 720910, 131072, 6, 720911, 131072, 6, 720912, 131072, 6, 786444, 131072, 6, 786441, 131072, 6, 786440, 131072, 6, 786439, 131072, 6, 720902, 327680, 6, 720901, 131072, 6, 589828, 327680, 6, 589827, 131072, 6, 589826, 131072, 6, 589825, 131072, 6, 589824, 131072, 6, 655359, 131072, 6, 917499, 131072, 6, 917498, 131072, 6, 983032, 131072, 6, 983031, 131072, 6, 983030, 131072, 6, 983029, 131072, 6, 983028, 131072, 6, 655358, 65536, 6, 720893, 65536, 6, 851964, 65536, 6, 917497, 65536, 6, 851955, 327680, 6, 786418, 327680, 6, 65539, 262144, 5, 786442, 131072, 6, 786443, 131072, 6, 65538, 196608, 5, 131064, 262144, 5, 262135, 262144, 5)
layer_2/name = "Decorations"
layer_2/y_sort_enabled = true
layer_2/tile_data = PackedInt32Array(524295, 0, 1, 524300, 589824, 3, 262156, 393216, 0, 327695, 327680, 0, 524302, 327680, 0, 524292, 327680, 0, 655368, 262144, 0, 327684, 262144, 0, 327694, 458752, 0, 131083, 458752, 0, 589829, 458752, 0, 655366, 524288, 0, 262154, 524288, 0, 131084, 524288, 0, 458770, 524288, 0, 655378, 524288, 0, 720908, 524288, 0, 393227, 524288, 0, 393219, 458752, 0, 196622, 589824, 6, 131082, 655360, 6, 851963, 589824, 6, 851962, 393216, 0, 458745, 458752, 0, 458746, 524288, 0, 720892, 524288, 0, 851957, 524288, 0, 851956, 0, 8, 655346, 524288, 0, 917496, 458752, 0, 720890, 327680, 0, 524276, 262144, 0, 524275, 131072, 8, 458741, 262144, 8, 983029, 589824, 0, 262147, 589824, 0, 196623, 589824, 0, 655377, 589824, 0, 393234, 589824, 0, 458747, 655360, 6, 262143, 196608, 11, 327676, 262144, 11, 327680, 458752, 11, 262141, 393216, 11, 196604, 131072, 11, 196608, 131072, 11, 524286, 65536, 11, 458748, 0, 11, 327675, 131072, 11, 393217, 131072, 11, 589822, 524288, 0, 458753, 458752, 0, 589827, 458752, 0)
layer_3/name = "Walls on top of vertical doors"
layer_3/z_index = 2
layer_4/name = "Water"
layer_4/z_index = -4
layer_4/navigation_enabled = false
layer_4/tile_data = PackedInt32Array(262140, 655360, 9, 327676, 655360, 9, 393212, 655360, 9, 393213, 655360, 9, 393214, 655360, 9, 393215, 655360, 9, 458751, 655360, 9, 393216, 655360, 9, 327680, 655360, 9, 262144, 655360, 9, 327679, 655360, 9, 327678, 655360, 9, 327677, 655360, 9, 262141, 655360, 9, 262142, 655360, 9, 262143, 655360, 9)

[node name="Campfire" parent="." instance=ExtResource("4_k7esm")]
position = Vector2(166, 140)

[node name="StartArea1" type="Area2D" parent="."]
position = Vector2(128, 8)
collision_layer = 0
collision_mask = 256
script = ExtResource("9_r816v")

[node name="CollisionShape2D" type="CollisionShape2D" parent="StartArea1"]
shape = SubResource("RectangleShape2D_qm2jb")

[node name="StartArea2" type="Area2D" parent="."]
position = Vector2(128, -9)
collision_layer = 0
collision_mask = 256
script = ExtResource("9_r816v")

[node name="CollisionShape2D" type="CollisionShape2D" parent="StartArea2"]
shape = SubResource("RectangleShape2D_qm2jb")

[node name="StartArea3" type="Area2D" parent="."]
position = Vector2(128, -26)
collision_layer = 0
collision_mask = 256
script = ExtResource("9_r816v")

[node name="CollisionShape2D" type="CollisionShape2D" parent="StartArea3"]
shape = SubResource("RectangleShape2D_qm2jb")

[node name="StartArea4" type="Area2D" parent="."]
position = Vector2(128, -44)
collision_layer = 0
collision_mask = 256
script = ExtResource("9_r816v")

[node name="CollisionShape2D" type="CollisionShape2D" parent="StartArea4"]
shape = SubResource("RectangleShape2D_qm2jb")

[node name="Settings" type="StaticBody2D" parent="."]
visible = false
position = Vector2(107, 112)

[node name="Sprite2D" type="Sprite2D" parent="Settings"]
texture = SubResource("PlaceholderTexture2D_erbcu")

[node name="SettingsInteractArea" type="Area2D" parent="Settings"]
script = ExtResource("2_n3t3v")
path_to_sprite = NodePath("../Sprite2D")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Settings/SettingsInteractArea"]
shape = SubResource("CircleShape2D_2m37t")

[node name="SeedSelectorSprite" type="Sprite2D" parent="."]
position = Vector2(154, 25)
texture = ExtResource("9_dti1o")

[node name="InteractArea" type="Area2D" parent="SeedSelectorSprite"]
script = ExtResource("2_n3t3v")
path_to_sprite = NodePath("..")

[node name="CollisionShape2D" type="CollisionShape2D" parent="SeedSelectorSprite/InteractArea"]
visible = false
position = Vector2(0, 13)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_va5t1")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 50

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
unique_name_in_owner = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0)

[node name="WardrobePopup" type="PopupPanel" parent="."]
disable_3d = true
canvas_item_default_texture_filter = 0
size = Vector2i(200, 150)
content_scale_mode = 1
content_scale_aspect = 3
theme = ExtResource("4_6s3ou")

[node name="WardrobeUI" type="MarginContainer" parent="WardrobePopup"]
texture_filter = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = 192.0
offset_bottom = 142.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("4_nybk1")

[node name="HBoxContainer" type="HBoxContainer" parent="WardrobePopup/WardrobeUI"]
layout_mode = 2

[node name="Armors" type="GridContainer" parent="WardrobePopup/WardrobeUI/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
columns = 3

[node name="VSeparator" type="VSeparator" parent="WardrobePopup/WardrobeUI/HBoxContainer"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="WardrobePopup/WardrobeUI/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ArmorDetails" type="VBoxContainer" parent="WardrobePopup/WardrobeUI/HBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="NameLabel" type="Label" parent="WardrobePopup/WardrobeUI/HBoxContainer/ScrollContainer/ArmorDetails"]
custom_minimum_size = Vector2(64, 0)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
autowrap_mode = 3

[node name="DescriptionLabel" type="Label" parent="WardrobePopup/WardrobeUI/HBoxContainer/ScrollContainer/ArmorDetails"]
custom_minimum_size = Vector2(64, 0)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("13_2uruh")
theme_override_font_sizes/font_size = 10
autowrap_mode = 3

[node name="SeedPopup" type="PopupPanel" parent="."]
disable_3d = true
size = Vector2i(97, 40)
theme = ExtResource("4_6s3ou")

[node name="MarginContainer" type="MarginContainer" parent="SeedPopup"]
offset_left = 8.0
offset_top = 8.0
offset_right = 89.0
offset_bottom = 32.0
theme = ExtResource("4_6s3ou")

[node name="LineEdit" type="LineEdit" parent="SeedPopup/MarginContainer"]
layout_mode = 2
placeholder_text = "SEED"
max_length = 8
expand_to_text_length = true
script = ExtResource("12_esh87")

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("18_0hiag")
volume_db = -8.0
autoplay = true
bus = &"Music"

[node name="WardrobeOpenSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("15_iuhqb")
volume_db = -2.0
bus = &"Sounds"

[node name="Hut" parent="." instance=ExtResource("25_mnnam")]
position = Vector2(-111, 131)

[node name="TikiTorch" parent="." instance=ExtResource("26_61yb5")]
position = Vector2(-196, 156)

[node name="TikiTorch2" parent="." instance=ExtResource("26_61yb5")]
position = Vector2(-59, 187)

[node name="PracticeDummy" parent="." instance=ExtResource("31_1hy67")]
position = Vector2(141, 127)

[node name="BaseCampItemsShop" parent="." instance=ExtResource("37_qhx6q")]
position = Vector2(91, 57)

[node name="Entries" type="Node2D" parent="."]

[node name="Left" type="Node2D" parent="Entries"]

[node name="Up" type="Node2D" parent="Entries"]

[node name="Right" type="Node2D" parent="Entries"]

[node name="Down" type="Node2D" parent="Entries"]

[node name="Doors" type="Node2D" parent="."]
y_sort_enabled = true

[node name="EnemyPositions" type="Node2D" parent="."]

[node name="TeleportPosition" type="Marker2D" parent="."]
position = Vector2(183, 158)

[node name="Items" type="Node2D" parent="."]

[node name="Weapons" type="Node2D" parent="."]

[node name="DebugRoomId" type="Label" parent="."]
z_index = 4
material = SubResource("CanvasItemMaterial_xxlah")
offset_right = 40.0
offset_bottom = 23.0
theme_override_font_sizes/font_size = 64

[node name="TikiTorch16" parent="." instance=ExtResource("26_61yb5")]
position = Vector2(70, 34)

[node name="SleepingBag" parent="." instance=ExtResource("39_sleg1")]
position = Vector2(169, 156)

[node name="WakeUpDialogueTimer" type="Timer" parent="."]
one_shot = true

[node name="Animals" type="Node2D" parent="."]
y_sort_enabled = true

[node name="Rabbit" type="Marker2D" parent="Animals"]
position = Vector2(102, 171)
script = ExtResource("46_v21xh")
animal = 1

[node name="Turtle" type="Marker2D" parent="Animals"]
position = Vector2(-11, 109)
script = ExtResource("46_v21xh")
animal = 2

[node name="BlackCat" type="Marker2D" parent="Animals"]
position = Vector2(195, 49)
script = ExtResource("46_v21xh")

[node name="Wardrobe" type="StaticBody2D" parent="."]
position = Vector2(282, 54)
collision_mask = 0

[node name="Sprite2D" type="Sprite2D" parent="Wardrobe"]
position = Vector2(0, -7)
texture = ExtResource("4_8ics2")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wardrobe"]
visible = false
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_5rkvv")

[node name="WardrobeInteractArea" type="Area2D" parent="Wardrobe"]
script = ExtResource("2_n3t3v")
path_to_sprite = NodePath("../Sprite2D")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wardrobe/WardrobeInteractArea"]
visible = false
position = Vector2(0, 5)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_ie571")

[node name="Tent" type="StaticBody2D" parent="."]
position = Vector2(280, 69)

[node name="Walls" type="Sprite2D" parent="Tent"]
z_index = -1
position = Vector2(0, -21)
texture = ExtResource("21_bua2m")

[node name="Shadow" type="Sprite2D" parent="Tent"]
z_index = 1
position = Vector2(0, -21)
texture = ExtResource("22_qdbci")

[node name="Ceiling" type="Sprite2D" parent="Tent"]
z_index = 1
position = Vector2(0, -21)
texture = ExtResource("23_laaqs")

[node name="TransparentParentWhenPlayerEnters" type="Area2D" parent="Tent/Ceiling"]
script = ExtResource("24_aoyyl")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Tent/Ceiling/TransparentParentWhenPlayerEnters"]
position = Vector2(0, 6)
shape = SubResource("RectangleShape2D_uiodv")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Tent"]
position = Vector2(-19, -15)
shape = SubResource("RectangleShape2D_v4sqh")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Tent"]
position = Vector2(19, -15)
shape = SubResource("RectangleShape2D_v4sqh")
